FIX: add paragraph spacing in editor

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,3 +23,18 @@ body {
 button {
   font-family: var(--font-roboto);
 }
+
+.prose {
+  font-family: "Inter", sans-serif;
+  line-height: 1.5em;
+}
+
+.prose strong {
+  font-weight: 600;
+}
+
+.prose p {
+  /* within paragraph */
+  margin-bottom: 1.2rem;
+  /* between paragraphs */
+}
